--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,7 @@
 
 === Description
 
-Meeseeker is a Ruby on Rails app that allows users to search and find nearby Meeseeks (students in our cohort) by address. If a Meeseek is within 25 miles radius of the location, the Meeseek is be listed under 'Nearby Meeseeks'.
+Meeseeker is a Ruby on Rails app that allows users to search and find nearby Meeseeks (students in our cohort) by address. If a Meeseek is within 25 miles radius of the location, the Meeseek will be listed under 'Nearby Meeseeks'.
 
 === Tech Used / Stack
 
